Fix spacing of "(X more)" tag in card title

--- a/src/web/views/EmployerDetailsHeader/EmployerDetailsHeader.scss
+++ b/src/web/views/EmployerDetailsHeader/EmployerDetailsHeader.scss
@@ -110,6 +110,10 @@ $padding-interior: 12px;
 		vertical-align: bottom;
 	}
 
+	.EmployerDetailsHeader__AliasesMore {
+		margin-left: 3px;
+	}
+
 	.EmployerDetailsHeader__AggregateRatings {
 		align-items: center;
 		display: flex;
